logo footer bg color update

--- a/contact.html
+++ b/contact.html
@@ -254,7 +254,7 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/cs
 
     <div class="copyright mt-3 text-center py-3">
       <div class="fs-6 lexend">
-        Copyright © 2025 TheBoys. All Rights Reserved.
+        Copyright © 2025 Wexor. All Rights Reserved. 
       </div>
     </div>
 
