--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -177,7 +177,7 @@ referrerpolicy="no-referrer" />
                   <h5 class="fw-bold">Introduction</h5>
                   <!-- <p class="text-light mb-2 fw-bold">11 March 2025</p> -->
                   <p class="text-light">
-                    These Terms and Conditions (“Terms”) govern your use of our website, products, and services. By engaging with [Your Company Name], you accept and agree to these Terms. If you do not agree, please discontinue using our services.
+                    These Terms and Conditions (“Terms”) govern your use of our website, products, and services. By engaging with Wexor, you accept and agree to these Terms. If you do not agree, please discontinue using our services.
                   </p>
                 </li>
 
@@ -240,7 +240,7 @@ Clients are responsible for securing the necessary rights for any content (text,
 
 We reserve the right to showcase completed projects in our portfolio, unless otherwise agreed. <br>
 
-All drafts, concepts, or unused designs remain the property of [Your Company Name].
+All drafts, concepts, or unused designs remain the property of Wexor.
                   </p>
                 </li>
 
@@ -306,7 +306,7 @@ Fees for completed work and ongoing expenses remain payable upon termination.
                   <h5 class="fw-bold">Governing Law</h5>
                   <!-- <p class="text-light mb-2 fw-bold">24 June 2025</p> -->
                   <p class="text-light">
-                  These Terms shall be governed by and construed in accordance with the laws of [Your Country/State]. Any disputes shall be subject to the jurisdiction of the courts in [Your City/State].
+                  These Terms shall be governed by and construed in accordance with the laws of India. Any disputes shall be subject to the jurisdiction of the courts in Tamilnadu.
                   </p>
                 </li>
 
@@ -356,8 +356,8 @@ Fees for completed work and ongoing expenses remain payable upon termination.
           <a href="./index.html">
             <img
               src="./img/logo/theboys.png"
-              alt="startup_logo"
-              class="startup_logo"
+              alt="Wexor_logo"
+              class="Wexor_logo"
             />
           </a>
           <p class="mt-4">
@@ -414,7 +414,7 @@ Fees for completed work and ongoing expenses remain payable upon termination.
 
     <div class="copyright mt-3 text-center py-3">
       <div class="fs-6 lexend">
-        Copyright © 2025 TheBoys. All Rights Reserved.
+        Copyright © 2025 Wexor. All Rights Reserved. 
       </div>
     </div>
 
