--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -414,7 +414,7 @@ Address: Coimbatore
 
     <div class="copyright mt-3 text-center py-3">
       <div class="fs-6 lexend">
-        Copyright © 2025 TheBoys. All Rights Reserved.
+        Copyright © 2025 Wexor. All Rights Reserved. 
       </div>
     </div>
 
