--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ referrerpolicy="no-referrer" />
 
     <div class="copyright mt-3 text-center py-3">
       <div class="fs-6 lexend">
-        Copyright © 2025 TheBoys. All Rights Reserved.
+        Copyright © 2025 Wexor. All Rights Reserved. 
       </div>
     </div>
 
