--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Wexor</title>
+    <link rel="icon" href="./img/logo/wexor_fav.png">
 
 
 <link
