--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wexor</title>
+    <link rel="icon" href="./img/logo/fav.png">
     <!-- AOS CSS -->
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
@@ -85,7 +86,7 @@ referrerpolicy="no-referrer" />
             <span class="logo_container">
               <div class="logo_back"></div>
               <a class="navbar-brand outer_logo mx-2 mx-md-4" href="./index.html"><img
-                  src="./img/logo/theboys.png" alt="Wexor_logo" class="w-100"/>
+                  src="./img/logo/wexor.webp" alt="Wexor_logo" class="w-100"/>
             </a>
             </span>
             <button
