--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ referrerpolicy="no-referrer" />
     </header>
       <!-- header end -->
 
-      
+      <div class="body_bg">
 
  <!-- banner -->
  <section class="banner mt-5 mb-5">
@@ -423,19 +423,19 @@ referrerpolicy="no-referrer" />
 <div class="container mt-5 mb-3">
   <div class="row">
     <div class="col-lg-5">
-      <h2 class="jost ">Smart Tools - Stunning Work</h2><p class="text-light mt-3">Your business deserves a powerful online identity we create websites and designs that capture attention and build trust.</p>
+      <h2 class="jost ">Trusted by Leading Brands</h2><p class="text-light mt-3">Your business deserves a powerful online identity we create websites and designs that capture attention and build trust.</p>
     </div>
     <div class="col-lg-7">
      <div class="marquee-wrapper">
         <div class="marquee-content">
-          <div class="marquee-item item d-block icon_pad"><img src="./icons/php.png" alt="" class="w-100"><h6 class="text-center">PHP</h6></div>
-          <div class="marquee-item item d-block icon_pad"><img src="./icons/html-5.png" alt="" class="w-100"><h6 class="text-center">HTML</h6></div>
-          <div class="marquee-item item d-block icon_pad"><img src="./icons/wordpress.png" alt="" class="w-100"><h6 class="text-center">Wordpress</h6></div>
-          <div class="marquee-item item d-block icon_pad"><img src="./icons/social.png" alt="" class="w-100"><h6 class="text-center">Title</h6></div>
-          <div class="marquee-item item d-block icon_pad"><img src="./icons/seo.png" alt="" class="w-100"><h6 class="text-center">SEO</h6></div>
+          <div class="marquee-item item d-block icon_pad"><img src="./icons/php.png" alt="" class="w-100"></div>
+          <div class="marquee-item item d-block icon_pad"><img src="./icons/html-5.png" alt="" class="w-100"></div>
+          <div class="marquee-item item d-block icon_pad"><img src="./icons/wordpress.png" alt="" class="w-100"></div>
+          <div class="marquee-item item d-block icon_pad"><img src="./icons/social.png" alt="" class="w-100"></div>
+          <div class="marquee-item item d-block icon_pad"><img src="./icons/seo.png" alt="" class="w-100"></div>
           <!-- duplicate items to make loop -->
-          <div class="marquee-item item d-block icon_pad"><img src="./icons/photoshop.png" alt="" class="w-100"><h6 class="text-center"></h6></div>
-          <div class="marquee-item item d-block icon_pad"><img src="./img/2.png" alt="" class="w-100"><h6 class="text-center">Title</h6></div>
+          <div class="marquee-item item d-block icon_pad"><img src="./icons/photoshop.png" alt="" class="w-100"></div>
+          <div class="marquee-item item d-block icon_pad"><img src="./img/2.png" alt="" class="w-100"></div>
         </div>
     
     </div>
@@ -455,7 +455,7 @@ referrerpolicy="no-referrer" />
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
 </a>
 <!-- whatsapp -->
-
+</div>
 
 <!-- footer -->
 <footer  class=" footer pt-3 margin-top mt-5">
