--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -148,7 +148,7 @@ referrerpolicy="no-referrer" />
 <!-- header end -->
 
 
-
+<div class="body_bg pb-5">
 
 <main>
 <!-- breadcrumb_bg start -->
@@ -329,7 +329,7 @@ Address: Coimbatore
             </div>
     </div>
 </main>
-
+</div>
 
 
 
@@ -348,7 +348,7 @@ Address: Coimbatore
 
 
 <!-- footer -->
-<footer  class=" footer pt-3 margin-top mt-5">
+<footer  class=" footer pt-3 margin-top pb-2">
   <div class="container mt-4">
     <div class="row">
 
