--- a/contact.html
+++ b/contact.html
@@ -111,6 +111,7 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/cs
     </header>
       <!-- header end -->
        
+      <div class="body_bg pb-5">
 
 <main>
    <div class="container-fluid breadcrumb_bg ">
@@ -179,7 +180,7 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/cs
       </div>
     </div>
 </main>
-
+</div>
 <!-- whatsapp -->
   <a href="https://wa.me/919943355529" target="_blank" id="whatsapp-sticky">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
@@ -188,7 +189,7 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/cs
 
 
 <!-- footer -->
-<footer  class=" footer pt-3 margin-top mt-5">
+<footer  class=" footer pt-3 margin-top pb-2">
   <div class="container mt-4">
     <div class="row">
 
