--- a/our_works.html
+++ b/our_works.html
@@ -149,13 +149,8 @@ referrerpolicy="no-referrer"
 
 
 
-
+<div class="body_bg pb-5">
 <main>
-
-
-
-
-
 
    <div class="container-fluid breadcrumb_bg ">
     <div class="container p-5  justify-content-center">
@@ -294,6 +289,7 @@ referrerpolicy="no-referrer"
 
 
 </main>
+</div>
 
 <button id="goTopBtn" title="Go to top">
   <!-- <i class="bi bi-arrow-up"></i> -->
@@ -302,7 +298,7 @@ referrerpolicy="no-referrer"
 
 
 <!-- footer -->
-<footer  class=" footer pt-3 margin-top mt-5">
+<footer  class=" footer pt-3 margin-top pb-2">
   <div class="container mt-4">
     <div class="row">
 
