--- a/services.html
+++ b/services.html
@@ -107,7 +107,7 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/cs
         <!-- navbar end -->
     </header>
       <!-- header end -->
-
+<div class="body_bg pb-5">
    <div class="container-fluid breadcrumb_bg ">
     <div class="container p-5  justify-content-center">
       <h2 class="orange_title mt-2">Services </h2>
@@ -241,10 +241,10 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/cs
 
  
 </main>
-
+</div>
 
   <!-- footer -->
-<footer  class=" footer pt-3 margin-top mt-5">
+<footer  class=" footer pt-3 margin-top pb-2">
   <div class="container mt-4">
     <div class="row">
 
