--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -149,7 +149,7 @@ referrerpolicy="no-referrer" />
 
 
 
-
+<div class="body_bg pb-5">
 <main>
 <!-- breadcrumb_bg start -->
 
@@ -329,7 +329,7 @@ Fees for completed work and ongoing expenses remain payable upon termination.
         </div>
     </div>
 </main>
-
+</div>
 
 
 
@@ -341,14 +341,14 @@ Fees for completed work and ongoing expenses remain payable upon termination.
 
     
 
-      <button id="goTopBtn" title="Go to top">
+  <button id="goTopBtn" title="Go to top">
   <!-- <i class="bi bi-arrow-up"></i> -->
   <i class="fa-solid fa-arrow-up"></i>
 </button>
 
 
 <!-- footer -->
-<footer  class=" footer pt-3 margin-top mt-5">
+<footer  class=" footer pt-3 margin-top pb-2">
   <div class="container mt-4">
     <div class="row">
 
