--- a/about.html
+++ b/about.html
@@ -143,7 +143,11 @@ referrerpolicy="no-referrer"
 
 
 
- <div class="container-fluid breadcrumb_bg ">
+ 
+
+
+   <div class="body_bg pb-5">
+    <div class="container-fluid breadcrumb_bg ">
     <div class="container p-5  justify-content-center">
       <h2 class="orange_title mt-2">About Us</h2>
       <ul class="breadcrumb">
@@ -152,7 +156,6 @@ referrerpolicy="no-referrer"
       </ul>
     </div>
    </div>
-
 <!-- first section -->
     <section class="mt-5 mb-5 margin-top" id="about">
       <div class="container mt-5 mb-5">
@@ -314,11 +317,11 @@ referrerpolicy="no-referrer"
     <!-- Team Section end -->
 
     <!-- Team Section end -->
-
+</div>
 
 
 <!-- footer -->
-<footer  class=" footer pt-3 margin-top mt-5">
+<footer  class=" footer pt-5 margin-top pb-2">
   <div class="container mt-4">
     <div class="row">
 
