--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ referrerpolicy="no-referrer" />
     </header>
       <!-- header end -->
 
-      <div class="body_bg">
+<div class="body_bg pb-5">
 
  <!-- banner -->
  <section class="banner mt-5 mb-5">
@@ -458,7 +458,7 @@ referrerpolicy="no-referrer" />
 </div>
 
 <!-- footer -->
-<footer  class=" footer pt-3 margin-top mt-5">
+<footer  class=" footer pt-3 margin-top pb-2">
   <div class="container mt-4">
     <div class="row">
 
@@ -544,7 +544,6 @@ referrerpolicy="no-referrer" />
 
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-
 
 <script src="./go_to_top.js"></script>
 
